// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows for component overrides 1`] = `
<ul
  style={
    Object {
      "padding": "0",
    }
  }
>
  <div />
  <div />
  <div />
  <div />
</ul>
`;

exports[`allows for method overrides 1`] = `
<ul
  style={
    Object {
      "padding": "0",
    }
  }
>
  <div
    className="MuiButtonBase-root-11 MuiListItem-root-1 MuiListItem-default-4 MuiListItem-gutters-8 MuiListItem-button-9"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "backgroundColor": "#f3f3f3",
        "margin": "2px 0",
        "paddingBottom": "0",
        "paddingTop": "0",
      }
    }
    tabIndex="0"
  >
    <div
      style={
        Object {
          "paddingLeft": 0,
        }
      }
    />
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-15 MuiListItemIcon-root-14"
      focusable="false"
      onClick={[Function]}
      onKeyPress={[Function]}
      style={
        Object {
          "display": "inline-block",
          "marginRight": "0",
          "minWidth": "20px",
          "textAlign": "center",
          "width": "20px",
        }
      }
      tabIndex={0}
      type="button"
      viewBox="0 0 24 24"
    >
      <path
        d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    <span
      className="MuiButtonBase-root-11 MuiIconButton-root-31 MuiSwitchBase-root-27 MuiCheckbox-root-22 MuiCheckbox-colorPrimary-25"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={Object {}}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label-36"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-15"
          focusable="false"
          style={Object {}}
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
        <input
          checked={false}
          className="MuiSwitchBase-input-30"
          onChange={[Function]}
          tabIndex={0}
          type="checkbox"
        />
      </span>
      <span
        className="MuiTouchRipple-root-37"
      />
    </span>
    <div
      className="MuiListItemText-root-44"
      role="button"
      style={
        Object {
          "padding": "0",
        }
      }
      tabIndex={0}
    >
      <span
        className="MuiTypography-root-50 MuiTypography-subheading-57 MuiListItemText-primary-47"
      >
        <p
          style={
            Object {
              "padding": "0",
              "wordWrap": "break-word",
            }
          }
        >
          2017
           
          <i>
            (
            Last Year
            )
          </i>
        </p>
      </span>
    </div>
    <span
      className="MuiTouchRipple-root-37"
    />
  </div>
  <ul
    className="MuiList-root-75 MuiList-padding-76"
    style={
      Object {
        "paddingBottom": "0",
        "paddingTop": "0",
      }
    }
  >
    <span />
  </ul>
  <div
    className="MuiButtonBase-root-11 MuiListItem-root-1 MuiListItem-default-4 MuiListItem-gutters-8 MuiListItem-button-9"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "backgroundColor": "#f3f3f3",
        "margin": "2px 0",
        "paddingBottom": "0",
        "paddingTop": "0",
      }
    }
    tabIndex="0"
  >
    <div
      style={
        Object {
          "paddingLeft": 0,
        }
      }
    />
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-15 MuiListItemIcon-root-14"
      focusable="false"
      onClick={[Function]}
      onKeyPress={[Function]}
      style={
        Object {
          "display": "inline-block",
          "marginRight": "0",
          "minWidth": "20px",
          "textAlign": "center",
          "width": "20px",
        }
      }
      tabIndex={0}
      type="button"
      viewBox="0 0 24 24"
    >
      <path
        d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    <span
      className="MuiButtonBase-root-11 MuiIconButton-root-31 MuiSwitchBase-root-27 MuiCheckbox-root-22 MuiCheckbox-colorPrimary-25"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={Object {}}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label-36"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-15"
          focusable="false"
          style={Object {}}
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
        <input
          checked={false}
          className="MuiSwitchBase-input-30"
          onChange={[Function]}
          tabIndex={0}
          type="checkbox"
        />
      </span>
      <span
        className="MuiTouchRipple-root-37"
      />
    </span>
    <div
      className="MuiListItemText-root-44"
      role="button"
      style={
        Object {
          "padding": "0",
        }
      }
      tabIndex={0}
    >
      <span
        className="MuiTypography-root-50 MuiTypography-subheading-57 MuiListItemText-primary-47"
      >
        <p
          style={
            Object {
              "padding": "0",
              "wordWrap": "break-word",
            }
          }
        >
          2018
           
          <i>
            (
            Current Year
            )
          </i>
        </p>
      </span>
    </div>
    <span
      className="MuiTouchRipple-root-37"
    />
  </div>
  <ul
    className="MuiList-root-75 MuiList-padding-76"
    style={
      Object {
        "paddingBottom": "0",
        "paddingTop": "0",
      }
    }
  >
    <span />
  </ul>
</ul>
`;

exports[`renders a sample tree 1`] = `
<ul
  style={
    Object {
      "padding": "0",
    }
  }
>
  <div
    className="MuiButtonBase-root-11 MuiListItem-root-1 MuiListItem-default-4 MuiListItem-gutters-8 MuiListItem-button-9"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "backgroundColor": "#f3f3f3",
        "margin": "2px 0",
        "paddingBottom": "0",
        "paddingTop": "0",
      }
    }
    tabIndex="0"
  >
    <div
      style={
        Object {
          "paddingLeft": 0,
        }
      }
    />
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-15 MuiListItemIcon-root-14"
      focusable="false"
      onClick={[Function]}
      onKeyPress={[Function]}
      style={
        Object {
          "display": "inline-block",
          "marginRight": "0",
          "minWidth": "20px",
          "textAlign": "center",
          "width": "20px",
        }
      }
      tabIndex={0}
      type="button"
      viewBox="0 0 24 24"
    >
      <path
        d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    <span
      className="MuiButtonBase-root-11 MuiIconButton-root-31 MuiSwitchBase-root-27 MuiCheckbox-root-22 MuiCheckbox-colorPrimary-25"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={Object {}}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label-36"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-15"
          focusable="false"
          style={Object {}}
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
        <input
          checked={false}
          className="MuiSwitchBase-input-30"
          onChange={[Function]}
          tabIndex={0}
          type="checkbox"
        />
      </span>
      <span
        className="MuiTouchRipple-root-37"
      />
    </span>
    <div
      className="MuiListItemText-root-44"
      role="button"
      style={
        Object {
          "padding": "0",
        }
      }
      tabIndex={0}
    >
      <span
        className="MuiTypography-root-50 MuiTypography-subheading-57 MuiListItemText-primary-47"
      >
        <p
          style={
            Object {
              "padding": "0",
              "wordWrap": "break-word",
            }
          }
        >
          2017
           
          <i>
            (
            Last Year
            )
          </i>
        </p>
      </span>
    </div>
    <span
      className="MuiTouchRipple-root-37"
    />
  </div>
  <ul
    className="MuiList-root-75 MuiList-padding-76"
    style={
      Object {
        "paddingBottom": "0",
        "paddingTop": "0",
      }
    }
  >
    <span />
  </ul>
  <div
    className="MuiButtonBase-root-11 MuiListItem-root-1 MuiListItem-default-4 MuiListItem-gutters-8 MuiListItem-button-9"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "backgroundColor": "#f3f3f3",
        "margin": "2px 0",
        "paddingBottom": "0",
        "paddingTop": "0",
      }
    }
    tabIndex="0"
  >
    <div
      style={
        Object {
          "paddingLeft": 0,
        }
      }
    />
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-15 MuiListItemIcon-root-14"
      focusable="false"
      onClick={[Function]}
      onKeyPress={[Function]}
      style={
        Object {
          "display": "inline-block",
          "marginRight": "0",
          "minWidth": "20px",
          "textAlign": "center",
          "width": "20px",
        }
      }
      tabIndex={0}
      type="button"
      viewBox="0 0 24 24"
    >
      <path
        d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    <span
      className="MuiButtonBase-root-11 MuiIconButton-root-31 MuiSwitchBase-root-27 MuiCheckbox-root-22 MuiCheckbox-colorPrimary-25"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={Object {}}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label-36"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-15"
          focusable="false"
          style={Object {}}
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
        <input
          checked={false}
          className="MuiSwitchBase-input-30"
          onChange={[Function]}
          tabIndex={0}
          type="checkbox"
        />
      </span>
      <span
        className="MuiTouchRipple-root-37"
      />
    </span>
    <div
      className="MuiListItemText-root-44"
      role="button"
      style={
        Object {
          "padding": "0",
        }
      }
      tabIndex={0}
    >
      <span
        className="MuiTypography-root-50 MuiTypography-subheading-57 MuiListItemText-primary-47"
      >
        <p
          style={
            Object {
              "padding": "0",
              "wordWrap": "break-word",
            }
          }
        >
          2018
           
          <i>
            (
            Current Year
            )
          </i>
        </p>
      </span>
    </div>
    <span
      className="MuiTouchRipple-root-37"
    />
  </div>
  <ul
    className="MuiList-root-75 MuiList-padding-76"
    style={
      Object {
        "paddingBottom": "0",
        "paddingTop": "0",
      }
    }
  >
    <span />
  </ul>
</ul>
`;

exports[`renders the correct pagination structure 1`] = `
<ul
  style={
    Object {
      "padding": "0",
    }
  }
>
  <div
    className="MuiButtonBase-root-11 MuiListItem-root-1 MuiListItem-default-4 MuiListItem-gutters-8 MuiListItem-button-9"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "backgroundColor": "#f3f3f3",
        "margin": "2px 0",
        "paddingBottom": "0",
        "paddingTop": "0",
      }
    }
    tabIndex="0"
  >
    <div
      style={
        Object {
          "paddingLeft": 0,
        }
      }
    />
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-15 MuiListItemIcon-root-14"
      focusable="false"
      onClick={[Function]}
      onKeyPress={[Function]}
      style={
        Object {
          "display": "inline-block",
          "marginRight": "0",
          "minWidth": "20px",
          "textAlign": "center",
          "width": "20px",
        }
      }
      tabIndex={0}
      type="button"
      viewBox="0 0 24 24"
    >
      <path
        d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    <span
      className="MuiButtonBase-root-11 MuiIconButton-root-31 MuiSwitchBase-root-27 MuiCheckbox-root-22 MuiCheckbox-colorPrimary-25"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={Object {}}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label-36"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-15"
          focusable="false"
          style={Object {}}
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
        <input
          checked={false}
          className="MuiSwitchBase-input-30"
          onChange={[Function]}
          tabIndex={0}
          type="checkbox"
        />
      </span>
      <span
        className="MuiTouchRipple-root-37"
      />
    </span>
    <div
      className="MuiListItemText-root-44"
      role="button"
      style={
        Object {
          "padding": "0",
        }
      }
      tabIndex={0}
    >
      <span
        className="MuiTypography-root-50 MuiTypography-subheading-57 MuiListItemText-primary-47"
      >
        <p
          style={
            Object {
              "padding": "0",
              "wordWrap": "break-word",
            }
          }
        >
          2017
           
          <i>
            (
            Last Year
            )
          </i>
        </p>
      </span>
    </div>
    <span
      className="MuiTouchRipple-root-37"
    />
  </div>
  <ul
    className="MuiList-root-75 MuiList-padding-76"
    style={
      Object {
        "paddingBottom": "0",
        "paddingTop": "0",
      }
    }
  >
    <span />
  </ul>
  <div
    className="MuiButtonBase-root-11 MuiListItem-root-1 MuiListItem-default-4 MuiListItem-gutters-8 MuiListItem-button-9"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "backgroundColor": "#f3f3f3",
        "margin": "2px 0",
        "paddingBottom": "0",
        "paddingTop": "0",
      }
    }
    tabIndex="0"
  >
    <div
      style={
        Object {
          "paddingLeft": 0,
        }
      }
    />
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-15 MuiListItemIcon-root-14"
      focusable="false"
      onClick={[Function]}
      onKeyPress={[Function]}
      style={
        Object {
          "display": "inline-block",
          "marginRight": "0",
          "minWidth": "20px",
          "textAlign": "center",
          "width": "20px",
        }
      }
      tabIndex={0}
      type="button"
      viewBox="0 0 24 24"
    >
      <path
        d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    <span
      className="MuiButtonBase-root-11 MuiIconButton-root-31 MuiSwitchBase-root-27 MuiCheckbox-root-22 MuiCheckbox-colorPrimary-25"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={Object {}}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label-36"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-15"
          focusable="false"
          style={Object {}}
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
        <input
          checked={false}
          className="MuiSwitchBase-input-30"
          onChange={[Function]}
          tabIndex={0}
          type="checkbox"
        />
      </span>
      <span
        className="MuiTouchRipple-root-37"
      />
    </span>
    <div
      className="MuiListItemText-root-44"
      role="button"
      style={
        Object {
          "padding": "0",
        }
      }
      tabIndex={0}
    >
      <span
        className="MuiTypography-root-50 MuiTypography-subheading-57 MuiListItemText-primary-47"
      >
        <p
          style={
            Object {
              "padding": "0",
              "wordWrap": "break-word",
            }
          }
        >
          2018
           
          <i>
            (
            Current Year
            )
          </i>
        </p>
      </span>
    </div>
    <span
      className="MuiTouchRipple-root-37"
    />
  </div>
  <ul
    className="MuiList-root-75 MuiList-padding-76"
    style={
      Object {
        "paddingBottom": "0",
        "paddingTop": "0",
      }
    }
  >
    <span />
  </ul>
</ul>
`;

exports[`renders with a different indent width 1`] = `
<ul
  style={
    Object {
      "padding": "0",
    }
  }
>
  <div
    className="MuiButtonBase-root-11 MuiListItem-root-1 MuiListItem-default-4 MuiListItem-gutters-8 MuiListItem-button-9"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "backgroundColor": "#f3f3f3",
        "margin": "2px 0",
        "paddingBottom": "0",
        "paddingTop": "0",
      }
    }
    tabIndex="0"
  >
    <div
      style={
        Object {
          "paddingLeft": 0,
        }
      }
    />
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-15 MuiListItemIcon-root-14"
      focusable="false"
      onClick={[Function]}
      onKeyPress={[Function]}
      style={
        Object {
          "display": "inline-block",
          "marginRight": "0",
          "minWidth": "20px",
          "textAlign": "center",
          "width": "20px",
        }
      }
      tabIndex={0}
      type="button"
      viewBox="0 0 24 24"
    >
      <path
        d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    <span
      className="MuiButtonBase-root-11 MuiIconButton-root-31 MuiSwitchBase-root-27 MuiCheckbox-root-22 MuiCheckbox-colorPrimary-25"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={Object {}}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label-36"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-15"
          focusable="false"
          style={Object {}}
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
        <input
          checked={false}
          className="MuiSwitchBase-input-30"
          onChange={[Function]}
          tabIndex={0}
          type="checkbox"
        />
      </span>
      <span
        className="MuiTouchRipple-root-37"
      />
    </span>
    <div
      className="MuiListItemText-root-44"
      role="button"
      style={
        Object {
          "padding": "0",
        }
      }
      tabIndex={0}
    >
      <span
        className="MuiTypography-root-50 MuiTypography-subheading-57 MuiListItemText-primary-47"
      >
        <p
          style={
            Object {
              "padding": "0",
              "wordWrap": "break-word",
            }
          }
        >
          2017
           
          <i>
            (
            Last Year
            )
          </i>
        </p>
      </span>
    </div>
    <span
      className="MuiTouchRipple-root-37"
    />
  </div>
  <ul
    className="MuiList-root-75 MuiList-padding-76"
    style={
      Object {
        "paddingBottom": "0",
        "paddingTop": "0",
      }
    }
  >
    <span />
  </ul>
  <div
    className="MuiButtonBase-root-11 MuiListItem-root-1 MuiListItem-default-4 MuiListItem-gutters-8 MuiListItem-button-9"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "backgroundColor": "#f3f3f3",
        "margin": "2px 0",
        "paddingBottom": "0",
        "paddingTop": "0",
      }
    }
    tabIndex="0"
  >
    <div
      style={
        Object {
          "paddingLeft": 0,
        }
      }
    />
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-15 MuiListItemIcon-root-14"
      focusable="false"
      onClick={[Function]}
      onKeyPress={[Function]}
      style={
        Object {
          "display": "inline-block",
          "marginRight": "0",
          "minWidth": "20px",
          "textAlign": "center",
          "width": "20px",
        }
      }
      tabIndex={0}
      type="button"
      viewBox="0 0 24 24"
    >
      <path
        d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    <span
      className="MuiButtonBase-root-11 MuiIconButton-root-31 MuiSwitchBase-root-27 MuiCheckbox-root-22 MuiCheckbox-colorPrimary-25"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={Object {}}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label-36"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-15"
          focusable="false"
          style={Object {}}
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
        <input
          checked={false}
          className="MuiSwitchBase-input-30"
          onChange={[Function]}
          tabIndex={0}
          type="checkbox"
        />
      </span>
      <span
        className="MuiTouchRipple-root-37"
      />
    </span>
    <div
      className="MuiListItemText-root-44"
      role="button"
      style={
        Object {
          "padding": "0",
        }
      }
      tabIndex={0}
    >
      <span
        className="MuiTypography-root-50 MuiTypography-subheading-57 MuiListItemText-primary-47"
      >
        <p
          style={
            Object {
              "padding": "0",
              "wordWrap": "break-word",
            }
          }
        >
          2018
           
          <i>
            (
            Current Year
            )
          </i>
        </p>
      </span>
    </div>
    <span
      className="MuiTouchRipple-root-37"
    />
  </div>
  <ul
    className="MuiList-root-75 MuiList-padding-76"
    style={
      Object {
        "paddingBottom": "0",
        "paddingTop": "0",
      }
    }
  >
    <span />
  </ul>
</ul>
`;

exports[`renders with a different theme 1`] = `
<ul
  style={
    Object {
      "padding": "0",
    }
  }
>
  <div
    className="MuiButtonBase-root-11 MuiListItem-root-1 MuiListItem-default-4 MuiListItem-gutters-8 MuiListItem-button-9"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "margin": "2px 0",
        "padding": "0 8px",
      }
    }
    tabIndex="0"
  >
    <div
      style={
        Object {
          "paddingLeft": 0,
        }
      }
    />
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-15 MuiListItemIcon-root-14"
      focusable="false"
      onClick={[Function]}
      onKeyPress={[Function]}
      style={
        Object {
          "display": "inline-block",
          "fill": "black",
          "marginRight": "0",
          "minWidth": "20px",
          "textAlign": "center",
          "width": "20px",
        }
      }
      tabIndex={0}
      type="button"
      viewBox="0 0 24 24"
    >
      <path
        d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    <span
      className="MuiButtonBase-root-11 MuiIconButton-root-31 MuiSwitchBase-root-27 MuiCheckbox-root-22 MuiCheckbox-colorPrimary-25"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "height": "30px",
          "width": "30px",
        }
      }
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label-36"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-15"
          focusable="false"
          style={
            Object {
              "fill": "black",
              "fontSize": "20px",
            }
          }
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
        <input
          checked={false}
          className="MuiSwitchBase-input-30"
          onChange={[Function]}
          tabIndex={0}
          type="checkbox"
        />
      </span>
      <span
        className="MuiTouchRipple-root-37"
      />
    </span>
    <div
      className="MuiListItemText-root-44"
      role="button"
      style={
        Object {
          "padding": "0 5px",
        }
      }
      tabIndex={0}
    >
      <span
        className="MuiTypography-root-50 MuiTypography-subheading-57 MuiListItemText-primary-47"
      >
        <p
          style={
            Object {
              "padding": "0",
              "wordWrap": "break-word",
            }
          }
        >
          2017
           
          <i>
            (
            Last Year
            )
          </i>
        </p>
      </span>
    </div>
    <span
      className="MuiTouchRipple-root-37"
    />
  </div>
  <ul
    className="MuiList-root-75 MuiList-padding-76"
    style={
      Object {
        "paddingBottom": "0",
        "paddingTop": "0",
      }
    }
  >
    <span />
  </ul>
  <div
    className="MuiButtonBase-root-11 MuiListItem-root-1 MuiListItem-default-4 MuiListItem-gutters-8 MuiListItem-button-9"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "margin": "2px 0",
        "padding": "0 8px",
      }
    }
    tabIndex="0"
  >
    <div
      style={
        Object {
          "paddingLeft": 0,
        }
      }
    />
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-15 MuiListItemIcon-root-14"
      focusable="false"
      onClick={[Function]}
      onKeyPress={[Function]}
      style={
        Object {
          "display": "inline-block",
          "fill": "black",
          "marginRight": "0",
          "minWidth": "20px",
          "textAlign": "center",
          "width": "20px",
        }
      }
      tabIndex={0}
      type="button"
      viewBox="0 0 24 24"
    >
      <path
        d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    <span
      className="MuiButtonBase-root-11 MuiIconButton-root-31 MuiSwitchBase-root-27 MuiCheckbox-root-22 MuiCheckbox-colorPrimary-25"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "height": "30px",
          "width": "30px",
        }
      }
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label-36"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-15"
          focusable="false"
          style={
            Object {
              "fill": "black",
              "fontSize": "20px",
            }
          }
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
        <input
          checked={false}
          className="MuiSwitchBase-input-30"
          onChange={[Function]}
          tabIndex={0}
          type="checkbox"
        />
      </span>
      <span
        className="MuiTouchRipple-root-37"
      />
    </span>
    <div
      className="MuiListItemText-root-44"
      role="button"
      style={
        Object {
          "padding": "0 5px",
        }
      }
      tabIndex={0}
    >
      <span
        className="MuiTypography-root-50 MuiTypography-subheading-57 MuiListItemText-primary-47"
      >
        <p
          style={
            Object {
              "padding": "0",
              "wordWrap": "break-word",
            }
          }
        >
          2018
           
          <i>
            (
            Current Year
            )
          </i>
        </p>
      </span>
    </div>
    <span
      className="MuiTouchRipple-root-37"
    />
  </div>
  <ul
    className="MuiList-root-75 MuiList-padding-76"
    style={
      Object {
        "paddingBottom": "0",
        "paddingTop": "0",
      }
    }
  >
    <span />
  </ul>
</ul>
`;
